--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 VITE_MAINTENANCE_MODE=false
+
+# N8N Webhook URL (used for all workflows)
+VITE_N8N_WEBHOOK_URL=http://localhost:5678/webhook-test/AutoMate_Start
